// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<nav
  className="sc-fujyUd gWHmpD Sidebar-resources"
>
  <div
    className="sc-pNWxx"
  >
    <div>
      <div
        className="sc-fnVYJo kCixeB"
      >
        
      </div>
      <ul
        className="sc-fFSRdu eLEDce"
      >
        <li
          className="sc-bdnylx sc-iqAbSa hXxjVf iEaWtt"
        >
          <div
            className="sc-jrsJCI kkHxjM isSelected"
          >
            <a
              className="sc-kEqYlL eSYWEc"
              href="/"
              onClick={[Function]}
            >
              <div
                className="sc-gtssRu gdqidY isNone"
              >
                <span
                  className="sc-dlnjPT dpgarr"
                >
                  7
                </span>
              </div>
              <p
                className="sc-crzoUp fBHrqP"
              >
                All
              </p>
            </a>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fnVYJo kCixeB"
      >
        resources
      </div>
      <ul
        className="sc-fFSRdu eLEDce"
      >
        <li
          className="sc-bdnylx hXxjVf  isBuilding"
        >
          <button
            className="sc-gKAblj jOjMZw"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCApGN iiYSUR"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrsJCI kkHxjM  isBuilding"
          >
            <a
              className="sc-kEqYlL eSYWEc SidebarItem-link"
              href="/r/resource4"
              onClick={[Function]}
              title="resource4"
            >
              <div
                className="sc-gtssRu gdqidY isBuilding"
              >
                <span
                  className="sc-dlnjPT dpgarr"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crzoUp fBHrqP"
              >
                <span
                  className="sc-dIsAE cjTFAy"
                >
                  resource4
                </span>
              </p>
              <div
                className="sc-bqGHjH kFumNN"
              >
                <span
                  className="sc-hBMVcZ fGQFaE"
                >
                  <time
                    dateTime="2017-12-21T15:36:03.000Z"
                    title="2017-12-21T15:36:03.000Z"
                  >
                    &lt;5s ago
                  </time>
                </span>
                <span
                  className="sc-ksluoS huVVNh"
                >
                  12s
                </span>
              </div>
            </a>
            <button
              className="sc-hKFyIo cASokB SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
        <li
          className="sc-bdnylx hXxjVf  isBuilding"
        >
          <button
            className="sc-gKAblj jOjMZw"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCApGN iiYSUR"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrsJCI kkHxjM  isBuilding"
          >
            <a
              className="sc-kEqYlL eSYWEc SidebarItem-link"
              href="/r/resource9"
              onClick={[Function]}
              title="resource9"
            >
              <div
                className="sc-gtssRu gdqidY isBuilding"
              >
                <span
                  className="sc-dlnjPT dpgarr"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crzoUp fBHrqP"
              >
                <span
                  className="sc-dIsAE cjTFAy"
                >
                  resource9
                </span>
              </p>
              <div
                className="sc-bqGHjH kFumNN"
              >
                <span
                  className="sc-hBMVcZ fGQFaE"
                >
                  <time
                    dateTime="2017-12-21T15:35:58.000Z"
                    title="2017-12-21T15:35:58.000Z"
                  >
                    &lt;15s ago
                  </time>
                </span>
                <span
                  className="sc-ksluoS huVVNh"
                >
                  12s
                </span>
              </div>
            </a>
            <button
              className="sc-hKFyIo cASokB SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
        <li
          className="sc-bdnylx hXxjVf  isBuilding"
        >
          <button
            className="sc-gKAblj jOjMZw"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCApGN iiYSUR"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrsJCI kkHxjM  isBuilding"
          >
            <a
              className="sc-kEqYlL eSYWEc SidebarItem-link"
              href="/r/resource19"
              onClick={[Function]}
              title="resource19"
            >
              <div
                className="sc-gtssRu gdqidY isBuilding"
              >
                <span
                  className="sc-dlnjPT dpgarr"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crzoUp fBHrqP"
              >
                <span
                  className="sc-dIsAE cjTFAy"
                >
                  resource19
                </span>
              </p>
              <div
                className="sc-bqGHjH kFumNN"
              >
                <span
                  className="sc-hBMVcZ fGQFaE"
                >
                  <time
                    dateTime="2017-12-21T15:35:48.000Z"
                    title="2017-12-21T15:35:48.000Z"
                  >
                    &lt;30s ago
                  </time>
                </span>
                <span
                  className="sc-ksluoS huVVNh"
                >
                  12s
                </span>
              </div>
            </a>
            <button
              className="sc-hKFyIo cASokB SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
        <li
          className="sc-bdnylx hXxjVf  isBuilding"
        >
          <button
            className="sc-gKAblj jOjMZw"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCApGN iiYSUR"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrsJCI kkHxjM  isBuilding"
          >
            <a
              className="sc-kEqYlL eSYWEc SidebarItem-link"
              href="/r/resource29"
              onClick={[Function]}
              title="resource29"
            >
              <div
                className="sc-gtssRu gdqidY isBuilding"
              >
                <span
                  className="sc-dlnjPT dpgarr"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crzoUp fBHrqP"
              >
                <span
                  className="sc-dIsAE cjTFAy"
                >
                  resource29
                </span>
              </p>
              <div
                className="sc-bqGHjH kFumNN"
              >
                <span
                  className="sc-hBMVcZ fGQFaE"
                >
                  <time
                    dateTime="2017-12-21T15:35:38.000Z"
                    title="2017-12-21T15:35:38.000Z"
                  >
                    &lt;30s ago
                  </time>
                </span>
                <span
                  className="sc-ksluoS huVVNh"
                >
                  12s
                </span>
              </div>
            </a>
            <button
              className="sc-hKFyIo cASokB SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
        <li
          className="sc-bdnylx hXxjVf  isBuilding"
        >
          <button
            className="sc-gKAblj jOjMZw"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCApGN iiYSUR"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrsJCI kkHxjM  isBuilding"
          >
            <a
              className="sc-kEqYlL eSYWEc SidebarItem-link"
              href="/r/resource39"
              onClick={[Function]}
              title="resource39"
            >
              <div
                className="sc-gtssRu gdqidY isBuilding"
              >
                <span
                  className="sc-dlnjPT dpgarr"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crzoUp fBHrqP"
              >
                <span
                  className="sc-dIsAE cjTFAy"
                >
                  resource39
                </span>
              </p>
              <div
                className="sc-bqGHjH kFumNN"
              >
                <span
                  className="sc-hBMVcZ fGQFaE"
                >
                  <time
                    dateTime="2017-12-21T15:35:28.000Z"
                    title="2017-12-21T15:35:28.000Z"
                  >
                    &lt;45s ago
                  </time>
                </span>
                <span
                  className="sc-ksluoS huVVNh"
                >
                  12s
                </span>
              </div>
            </a>
            <button
              className="sc-hKFyIo cASokB SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
        <li
          className="sc-bdnylx hXxjVf  isBuilding"
        >
          <button
            className="sc-gKAblj jOjMZw"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCApGN iiYSUR"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrsJCI kkHxjM  isBuilding"
          >
            <a
              className="sc-kEqYlL eSYWEc SidebarItem-link"
              href="/r/resource49"
              onClick={[Function]}
              title="resource49"
            >
              <div
                className="sc-gtssRu gdqidY isBuilding"
              >
                <span
                  className="sc-dlnjPT dpgarr"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crzoUp fBHrqP"
              >
                <span
                  className="sc-dIsAE cjTFAy"
                >
                  resource49
                </span>
              </p>
              <div
                className="sc-bqGHjH kFumNN"
              >
                <span
                  className="sc-hBMVcZ fGQFaE"
                >
                  <time
                    dateTime="2017-12-21T15:35:18.000Z"
                    title="2017-12-21T15:35:18.000Z"
                  >
                    &lt;1m ago
                  </time>
                </span>
                <span
                  className="sc-ksluoS huVVNh"
                >
                  12s
                </span>
              </div>
            </a>
            <button
              className="sc-hKFyIo cASokB SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
        <li
          className="sc-bdnylx hXxjVf  isBuilding"
        >
          <button
            className="sc-gKAblj jOjMZw"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCApGN iiYSUR"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrsJCI kkHxjM  isBuilding"
          >
            <a
              className="sc-kEqYlL eSYWEc SidebarItem-link"
              href="/r/resource54"
              onClick={[Function]}
              title="resource54"
            >
              <div
                className="sc-gtssRu gdqidY isBuilding"
              >
                <span
                  className="sc-dlnjPT dpgarr"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crzoUp fBHrqP"
              >
                <span
                  className="sc-dIsAE cjTFAy"
                >
                  resource54
                </span>
              </p>
              <div
                className="sc-bqGHjH kFumNN"
              >
                <span
                  className="sc-hBMVcZ fGQFaE"
                >
                  <time
                    dateTime="2017-12-21T15:35:13.000Z"
                    title="2017-12-21T15:35:13.000Z"
                  >
                    &lt;1m ago
                  </time>
                </span>
                <span
                  className="sc-ksluoS huVVNh"
                >
                  12s
                </span>
              </div>
            </a>
            <button
              className="sc-hKFyIo cASokB SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<nav
  className="sc-fujyUd gWHmpD Sidebar-resources"
>
  <div
    className="sc-pNWxx"
  >
    <div>
      <div
        className="sc-fnVYJo kCixeB"
      >
        
      </div>
      <ul
        className="sc-fFSRdu eLEDce"
      >
        <li
          className="sc-bdnylx sc-iqAbSa hXxjVf iEaWtt"
        >
          <div
            className="sc-jrsJCI kkHxjM isSelected"
          >
            <a
              className="sc-kEqYlL eSYWEc"
              href="/"
              onClick={[Function]}
            >
              <div
                className="sc-gtssRu gdqidY isNone"
              >
                <span>
                   
                </span>
              </div>
              <p
                className="sc-crzoUp fBHrqP"
              >
                All
              </p>
            </a>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fnVYJo kCixeB"
      >
        resources
      </div>
      <ul
        className="sc-fFSRdu eLEDce"
      />
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders list of resources 1`] = `
<nav
  className="sc-fujyUd gWHmpD Sidebar-resources"
>
  <div
    className="sc-pNWxx"
  >
    <div>
      <div
        className="sc-fnVYJo kCixeB"
      >
        
      </div>
      <ul
        className="sc-fFSRdu eLEDce"
      >
        <li
          className="sc-bdnylx sc-iqAbSa hXxjVf iEaWtt"
        >
          <div
            className="sc-jrsJCI kkHxjM isSelected"
          >
            <a
              className="sc-kEqYlL eSYWEc"
              href="/"
              onClick={[Function]}
            >
              <div
                className="sc-gtssRu gdqidY isNone"
              >
                <span
                  className="sc-dlnjPT dpgarr"
                >
                  2
                </span>
              </div>
              <p
                className="sc-crzoUp fBHrqP"
              >
                All
              </p>
            </a>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fnVYJo kCixeB"
      >
        resources
      </div>
      <ul
        className="sc-fFSRdu eLEDce"
      >
        <li
          className="sc-bdnylx hXxjVf  isBuilding"
        >
          <button
            className="sc-gKAblj jOjMZw"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCApGN iiYSUR"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrsJCI kkHxjM  isBuilding"
          >
            <a
              className="sc-kEqYlL eSYWEc SidebarItem-link"
              href="/r/vigoda"
              onClick={[Function]}
              title="vigoda"
            >
              <div
                className="sc-gtssRu gdqidY isBuilding"
              >
                <span
                  className="sc-dlnjPT dpgarr"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crzoUp fBHrqP"
              >
                <span
                  className="sc-dIsAE cjTFAy"
                >
                  vigoda
                </span>
              </p>
              <div
                className="sc-bqGHjH kFumNN"
              >
                <span
                  className="sc-hBMVcZ fGQFaE"
                >
                  <time
                    dateTime="2017-12-21T15:36:07.000Z"
                    title="2017-12-21T15:36:07.000Z"
                  >
                    &lt;5s ago
                  </time>
                </span>
                <span
                  className="sc-ksluoS huVVNh"
                >
                  12s
                </span>
              </div>
            </a>
            <button
              className="sc-hKFyIo cASokB SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
        <li
          className="sc-bdnylx hXxjVf  isBuilding"
        >
          <button
            className="sc-gKAblj jOjMZw"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCApGN iiYSUR"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrsJCI kkHxjM  isBuilding"
          >
            <a
              className="sc-kEqYlL eSYWEc SidebarItem-link"
              href="/r/snack"
              onClick={[Function]}
              title="snack"
            >
              <div
                className="sc-gtssRu gdqidY isBuilding"
              >
                <span
                  className="sc-dlnjPT dpgarr"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crzoUp fBHrqP"
              >
                <span
                  className="sc-dIsAE cjTFAy"
                >
                  snack
                </span>
              </p>
              <div
                className="sc-bqGHjH kFumNN"
              >
                <span
                  className="sc-hBMVcZ fGQFaE"
                >
                  <time
                    dateTime="2017-12-21T15:35:57.000Z"
                    title="2017-12-21T15:35:57.000Z"
                  >
                    &lt;15s ago
                  </time>
                </span>
                <span
                  className="sc-ksluoS huVVNh"
                >
                  -10.0s
                </span>
              </div>
            </a>
            <button
              className="sc-hKFyIo cASokB SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<nav
  className="sc-fujyUd gWHmpD Sidebar-resources"
>
  <div
    className="sc-pNWxx"
  >
    <div>
      <div
        className="sc-fnVYJo kCixeB"
      >
        
      </div>
      <ul
        className="sc-fFSRdu eLEDce"
      >
        <li
          className="sc-bdnylx sc-iqAbSa hXxjVf iEaWtt"
        >
          <div
            className="sc-jrsJCI kkHxjM isSelected"
          >
            <a
              className="sc-kEqYlL eSYWEc"
              href="/"
              onClick={[Function]}
            >
              <div
                className="sc-gtssRu gdqidY isNone"
              >
                <span
                  className="sc-dlnjPT dpgarr"
                >
                  2
                </span>
              </div>
              <p
                className="sc-crzoUp fBHrqP"
              >
                All
              </p>
            </a>
          </div>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fnVYJo kCixeB"
      >
        resources
      </div>
      <ul
        className="sc-fFSRdu eLEDce"
      >
        <li
          className="sc-bdnylx hXxjVf  isBuilding"
        >
          <button
            className="sc-gKAblj jOjMZw"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCApGN iiYSUR"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrsJCI kkHxjM  isBuilding"
          >
            <a
              className="sc-kEqYlL eSYWEc SidebarItem-link"
              href="/r/vigoda"
              onClick={[Function]}
              title="vigoda"
            >
              <div
                className="sc-gtssRu gdqidY isBuilding"
              >
                <span
                  className="sc-dlnjPT dpgarr"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crzoUp fBHrqP"
              >
                <span
                  className="sc-dIsAE cjTFAy"
                >
                  vigoda
                </span>
              </p>
              <div
                className="sc-bqGHjH kFumNN"
              >
                <span
                  className="sc-hBMVcZ fGQFaE isEmpty"
                >
                  —
                </span>
                <span
                  className="sc-ksluoS huVVNh isEmpty"
                >
                  —
                </span>
              </div>
            </a>
            <button
              className="sc-hKFyIo cASokB SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
        <li
          className="sc-bdnylx hXxjVf  isBuilding"
        >
          <button
            className="sc-gKAblj jOjMZw"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-eCApGN iiYSUR"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <div
            className="sc-jrsJCI kkHxjM  isBuilding"
          >
            <a
              className="sc-kEqYlL eSYWEc SidebarItem-link"
              href="/r/snack"
              onClick={[Function]}
              title="snack"
            >
              <div
                className="sc-gtssRu gdqidY isBuilding"
              >
                <span
                  className="sc-dlnjPT dpgarr"
                >
                  1
                </span>
              </div>
              <p
                className="sc-crzoUp fBHrqP"
              >
                <span
                  className="sc-dIsAE cjTFAy"
                >
                  snack
                </span>
              </p>
              <div
                className="sc-bqGHjH kFumNN"
              >
                <span
                  className="sc-hBMVcZ fGQFaE isEmpty"
                >
                  —
                </span>
                <span
                  className="sc-ksluoS huVVNh isEmpty"
                >
                  —
                </span>
              </div>
            </a>
            <button
              className="sc-hKFyIo cASokB SidebarTriggerButton 
          "
              disabled={true}
              onClick={[Function]}
              title="Cannot trigger an update while resource is updating or update is pending."
            />
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;
